--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeo5a2mH5lz1N4Uo3zDfrKch5TnLJkM5n8P8qI5U8Z4FQl2g"
+  crossorigin="anonymous"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
