--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,6 +15,8 @@
   <body>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
