--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,13 +9,17 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeo5a2mH5lz1N4Uo3zDfrKch5TnLJkM5n8P8qI5U8Z4FQl2g"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AIBazaar - AI-Based Price Prediction Tool</title>
   </head>
   <body>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
